objects/Case.object
<CustomObject>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <valueField>$Source.RecordTypeId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>ParentCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_in_Version__c</fullName>
        <label>Planned in Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_stakeholder_Priority__c</fullName>
        <label>Assigned Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Class__c</fullName>
        <description>This field is used to capture ASIC Bug Problem Class</description>
        <label>Problem Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Type__c</fullName>
        <label>Problem Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asic Connect</fullName>
                </value>
                <value>
                    <fullName>Base Library</fullName>
                </value>
                <value>
                    <fullName>Chip</fullName>
                </value>
                <value>
                    <fullName>Core Library</fullName>
                </value>
                <value>
                    <fullName>Design Kit</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>Methodology</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Problem Tracking System</fullName>
                </value>
                <value>
                    <fullName>SOC Platform Based Design (PBD)</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Variant__c</fullName>
        <label>Process Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Project_CIT__c.Account__r.Id</valueField>
            </filterItems>
            <infoMessage>Option 1: To view all Projects, click &quot;Show all results&quot;
Option 2: Search base upon Project Name.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_CIT__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_comments__c</fullName>
        <defaultValue>&quot;Dear Customer, &quot; + BR() + BR() + 
&quot;We are closing the case. &quot; + BR() + BR() + 
&quot;1. What was the issue? &quot; + BR() + BR() + 

&quot;2. How was it fixed? &quot; + BR() + BR() + 

&quot;3. Prevention :&quot; + BR() + BR() +

&quot;If you have any other question, please feel free to open a new case. &quot; + BR()</defaultValue>
        <description>This Comment will be posted as Public Comment in Case Comments related list.</description>
        <inlineHelpText>This Comment will be posted as Public Comment in Case Comments related list.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Re_Open_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Re-Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Issue__c</fullName>
        <label>Recurring Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionCaseAccountMaping__c</fullName>
        <formula>If( TEXT(Account.Region__c) == &apos;US&apos;,&apos;Americas&apos;, 
If( TEXT(Account.Region__c) == &apos;APJ&apos;,&apos;Asia&apos;, 
If( TEXT(Account.Region__c) == &apos;EUR&apos;,&apos;EMEA&apos;, 
If( TEXT(Contact.Account.Region__c) == &apos;US&apos;,&apos;Americas&apos;, 
If( TEXT(Contact.Account.Region__c) == &apos;APJ&apos;,&apos;Asia&apos;, 
If( TEXT(Contact.Account.Region__c) == &apos;EUR&apos;,&apos;EMEA&apos;, 
&apos;&apos;))))))</formula>
        <label>RegionCaseAccountMaping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>New field part of Case Management 1.0</description>
        <label>Region Case Originated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Burlington</fullName>
                </value>
                <value>
                    <fullName>Fishkill</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>Santa Clara</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>Dresden</fullName>
                </value>
                <value>
                    <fullName>Munich</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>US-West</fullName>
                </value>
                <value>
                    <fullName>EMEA/Rest of Asia</fullName>
                </value>
                <value>
                    <fullName>China/Taiwan</fullName>
                </value>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>Japan/Korea</fullName>
                </value>
                <value>
                    <fullName>Qualcomm</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Bugs_Count__c</fullName>
        <label>Related Bugs Count</label>
        <summaryForeignKey>CaseBugAssociation__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Release_Task_Status__c</fullName>
        <description>Status of the release task : In Development, Testing, Ready for UAT, Ready for Production</description>
        <formula>TEXT(Release_Task__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the release task : In Development, Testing, Ready for UAT, Ready for Production</inlineHelpText>
        <label>Release Task Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The release task contains the resolution details for the case fix or enhancement</description>
        <inlineHelpText>The release task contains the resolution details for the case fix or enhancement</inlineHelpText>
        <label>Release Task</label>
        <referenceTo>Release_Task__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reopen_As_New_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reopen As New Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reopen_Request_Date__c</fullName>
        <label>Reopen Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reopen_Request_Status__c</fullName>
        <inlineHelpText>Reopen Request</inlineHelpText>
        <label>Reopen Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Severity__c</fullName>
        <label>Requested Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1. Stop Work</fullName>
                </value>
                <value>
                    <fullName>2. Tapeout Delay</fullName>
                </value>
                <value>
                    <fullName>3. Productivity Impact</fullName>
                </value>
                <value>
                    <fullName>4. Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>5. Annoyance</fullName>
                </value>
                <value>
                    <fullName>6. Informational</fullName>
                </value>
                <value>
                    <fullName>7. Not Specified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ResolutionBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Date__c</fullName>
        <label>Resolution  Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution_Plan__c</fullName>
        <label>Resolution Plan</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>Data Patch</fullName>
                </value>
                <value>
                    <fullName>Hot Fix</fullName>
                </value>
                <value>
                    <fullName>User Adminstration</fullName>
                </value>
                <value>
                    <fullName>Future Enhancement</fullName>
                </value>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>Reject Request</fullName>
                </value>
                <value>
                    <fullName>Information Provided</fullName>
                </value>
                <value>
                    <fullName>Customization Change</fullName>
                </value>
                <value>
                    <fullName>Responded to Inquiry</fullName>
                </value>
                <value>
                    <fullName>User No Longer Interested</fullName>
                </value>
                <value>
                    <fullName>Data Request</fullName>
                </value>
                <value>
                    <fullName>User Training</fullName>
                </value>
                <value>
                    <fullName>Application Monitoring</fullName>
                </value>
                <value>
                    <fullName>User Resolved</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Reports and Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Results__c</fullName>
        <label>Resolution Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <defaultValue>&quot;1. What was the issue? &quot; +  BR() +  BR() + BR() +

&quot;2. How was it fixed? &quot; +  BR() + BR() + BR() +

&quot;3. Prevention :&quot; +  BR()</defaultValue>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reviewer_Close_Date__c</fullName>
        <label>Reviewer Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revised_Target_Completion_Date__c</fullName>
        <label>Revised_Target_Completion_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <formula>TEXT(Account.Sales_Territory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Customer_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will determine if Owner wants to send Survey to the Customer\Case Creator.</description>
        <inlineHelpText>Send Survey to the Customer (Case Creator).</inlineHelpText>
        <label>Send Customer Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Now__c</fullName>
        <description>Service now ticket number</description>
        <externalId>true</externalId>
        <inlineHelpText>Service now ticket number 
Manually entered into Salesforce
Required for HotFix Change Requests</inlineHelpText>
        <label>Service Now Ticket</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Capture the business impact/importance of the case.  Part of the initial implementation of case management.</description>
        <inlineHelpText>Critical - Production Issue affecting all users.  No workaround.
Urgent - Major Functionality affecting most users.
Normal - Issue affecting some users
Low - Inquiry or issue affect a small group of users</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                    <color>#FF0000</color>
                    <label>Critical</label>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                    <color>#FF99FF</color>
                    <label>Urgent</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <color>#E27001</color>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#A845DC</color>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Everyone affected</fullName>
                    <color>#F3D904</color>
                    <label>Everyone affected</label>
                </value>
                <value>
                    <fullName>Entire region affected</fullName>
                    <color>#A53711</color>
                    <label>Entire region affected</label>
                </value>
                <value>
                    <fullName>Entire account affected</fullName>
                    <color>#66E9BD</color>
                    <label>Entire account affected</label>
                </value>
                <value>
                    <fullName>Individuals affected</fullName>
                    <color>#0B24BE</color>
                    <label>Individuals affected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Subject__c</fullName>
        <description>This field used in Case Email templates.</description>
        <formula>IF( LEN(Subject) &gt;100, LEFT(Subject, 100)+&apos;...&apos; , Subject )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signoff_by_Originator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signoff by Originator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkipValidationRuleInTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SkipValidationRuleInTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specification_Geometry__c</fullName>
        <formula>Specification__r.Technology_Geometry__c</formula>
        <label>Specification Geometry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specification_Revision__c</fullName>
        <label>Specification Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specification</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Design_Spec__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>PDK Specs</value>
            </filterItems>
            <infoMessage>Option 1: Search base upon PDK Title.
Option 2: To view all PDK, select Search &quot;All Fields&quot; and search &quot;PDK&quot;</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Design_Spec__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_GUI__c</fullName>
        <formula>IF(TEXT( Status)=&quot;New&quot;, Image(&quot;resource/CaseStatus_NewIco&quot;,&quot;&quot;,30,100), 
IF(TEXT( Status)=&quot;Acknowledged-In Queue&quot;, Image(&quot;resource/CaseStatus_Acknowledged&quot;,&quot;&quot;,30,100), 
IF(TEXT( Status)=&quot;In Progress&quot;, Image(&quot;resource/CaseStatus_Inprogress&quot;,&quot;&quot;,30,100), 
IF(TEXT( Status)=&quot;On Hold&quot;, Image(&quot;resource/CaseStatus_OnHold&quot;,&quot;&quot;,30,100), 
IF(TEXT( Status)=&quot;Reopen&quot;, Image (&quot;resource/CaseStatus_Reopen&quot;, &quot;&quot;,30,100),
IF(TEXT( Status)=&quot;Reassigned&quot;,Image (&quot;resource/CaseStatus_Reassigned&quot;, &quot;&quot;,30,100),
IF(LEFT(TEXT( Status), 6)=&quot;Closed&quot; , Image (&quot;resource/CaseStatus_Closed&quot;,&quot;&quot;,30,100), TEXT( Status))))))))</formula>
        <label>Status GUI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubStatus__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Deck Related</fullName>
                </value>
                <value>
                    <fullName>Design Manual Related</fullName>
                </value>
                <value>
                    <fullName>Design Rule</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Investigation completed</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PDK Usage Related</fullName>
                </value>
                <value>
                    <fullName>Pending DM Update</fullName>
                </value>
                <value>
                    <fullName>Pending further information from requestor</fullName>
                </value>
                <value>
                    <fullName>Pending Implementation</fullName>
                </value>
                <value>
                    <fullName>Pending on Requestor</fullName>
                </value>
                <value>
                    <fullName>Pending requestor&apos;s review</fullName>
                </value>
                <value>
                    <fullName>Pending Vendor Feedback</fullName>
                </value>
                <value>
                    <fullName>Tool Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type_A__c</fullName>
        <description>This field is used to capture ASIc Bug Sub-Type A</description>
        <label>Sub-Type A</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Problem_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>405PBD</fullName>
                </value>
                <value>
                    <fullName>440PBD</fullName>
                </value>
                <value>
                    <fullName>AE Management</fullName>
                </value>
                <value>
                    <fullName>AE Process</fullName>
                </value>
                <value>
                    <fullName>AES Web Development</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ASIC Business Tools</fullName>
                </value>
                <value>
                    <fullName>ASIC Chip Design</fullName>
                </value>
                <value>
                    <fullName>ASIC Customer Not in List</fullName>
                </value>
                <value>
                    <fullName>Asiclibs</fullName>
                </value>
                <value>
                    <fullName>ASIC Macro Compilers</fullName>
                </value>
                <value>
                    <fullName>ASIC P&amp;SO (DI/W)</fullName>
                </value>
                <value>
                    <fullName>ASIC Physical Design</fullName>
                </value>
                <value>
                    <fullName>ASICprod S/W Request</fullName>
                </value>
                <value>
                    <fullName>ASIC Products Database</fullName>
                </value>
                <value>
                    <fullName>ASIC Test Generation</fullName>
                </value>
                <value>
                    <fullName>Cadence DFTS (DFT Team Use Only)</fullName>
                </value>
                <value>
                    <fullName>CBGA</fullName>
                </value>
                <value>
                    <fullName>CCGA</fullName>
                </value>
                <value>
                    <fullName>CCP</fullName>
                </value>
                <value>
                    <fullName>CCRC Administration</fullName>
                </value>
                <value>
                    <fullName>Chipmerge</fullName>
                </value>
                <value>
                    <fullName>Circuit Design Tools</fullName>
                </value>
                <value>
                    <fullName>ClearCase Administration</fullName>
                </value>
                <value>
                    <fullName>ClearCase Hardware/Software Infrastructure</fullName>
                </value>
                <value>
                    <fullName>CLGA</fullName>
                </value>
                <value>
                    <fullName>CMVC Administration</fullName>
                </value>
                <value>
                    <fullName>Common Register Specification</fullName>
                </value>
                <value>
                    <fullName>Common Shapes Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Common SOC Register Design Specification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type_B__c</fullName>
        <label>Sub-Type B</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Type_A__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>405PBD</fullName>
                </value>
                <value>
                    <fullName>440PBD</fullName>
                </value>
                <value>
                    <fullName>A29Appmanager</fullName>
                </value>
                <value>
                    <fullName>ACOS</fullName>
                </value>
                <value>
                    <fullName>ACTS</fullName>
                </value>
                <value>
                    <fullName>ACTS enablement</fullName>
                </value>
                <value>
                    <fullName>ACTS library compile</fullName>
                </value>
                <value>
                    <fullName>Ambit Builder</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>ARGV</fullName>
                </value>
                <value>
                    <fullName>ASIC Alerts / Announcements</fullName>
                </value>
                <value>
                    <fullName>ASIC Application Notes</fullName>
                </value>
                <value>
                    <fullName>ASIC Change Database</fullName>
                </value>
                <value>
                    <fullName>ASIC Chip Release Process</fullName>
                </value>
                <value>
                    <fullName>ASIC Differential Net Simulation</fullName>
                </value>
                <value>
                    <fullName>ASIC Documentation Tracking System (ADTS)</fullName>
                </value>
                <value>
                    <fullName>ASIC Extraction Methodology</fullName>
                </value>
                <value>
                    <fullName>ASIC Formal Verification</fullName>
                </value>
                <value>
                    <fullName>ASIC Front End Processing/DFTS</fullName>
                </value>
                <value>
                    <fullName>ASIC Front-End Processing / RTL Compiler (RC)</fullName>
                </value>
                <value>
                    <fullName>ASIC Logic Simulation</fullName>
                </value>
                <value>
                    <fullName>ASIC Physical Implementation Flow</fullName>
                </value>
                <value>
                    <fullName>ASIC Power Estimation</fullName>
                </value>
                <value>
                    <fullName>ASIC Power Supply Integrity</fullName>
                </value>
                <value>
                    <fullName>Asic Support Macros 9 Track (asic_support_9t)</fullName>
                </value>
                <value>
                    <fullName>ASIC Synthesis</fullName>
                </value>
                <value>
                    <fullName>ASIC Test</fullName>
                </value>
                <value>
                    <fullName>ASIC Timing</fullName>
                </value>
                <value>
                    <fullName>asxver</fullName>
                </value>
                <value>
                    <fullName>Atrenta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>